# job-search

./: .env.example  .gitignore  README.md  app.py  app_results.py  pyproject.toml  requirements.txt
data/sft/: query_gen.test.jsonl  query_gen.val.jsonl
modal_apps/: serve.py  train.py
scripts/: blog_post.md  cron_agent.py  deploy_cron.py  deploy_space.py  generate_pipeline_figure.py  space_readme.md
scripts/spaces/results/: README.md  requirements.txt
scripts/spaces/search/: README.md  requirements.txt
src/job_search/: agents.py  concurrency.py  config.py  io_utils.py  preferences.py  prompts.py  providers.py  schemas.py  store.py
src/job_search/agent/: config.py  evaluate.py  filters.py  report.py  run.py  search.py
src/job_search/data/: evaluations.py  jobs.py  queries.py  resumes.py  sft_format.py
src/job_search/pipeline/: fetch_jobs.py  gen_evals.py  gen_queries.py  to_sft.py
src/job_search/space/: cards.py  inference.py  ocr.py  pipeline.py  theme.py  ui.py
src/job_search/spaces/common/: cards.py  theme.py
src/job_search/spaces/results/: ui.py
src/job_search/spaces/search/: inference.py  pipeline.py  ui.py
tests/: test_providers.py  test_schemas.py  test_sft_format.py
