[project]
name = "job-search"
version = "0.1.0"
description = "Resume -> job-search distillation pipeline: DeepSeek V4 teacher -> Qwen3.5-9B student, PydanticAI calling layer."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Main runtime — used by the local data-curation pipeline and PydanticAI student calls
    "pydantic-ai-slim[openai]>=1.0",
    # Upper bound forced by gradio[mcp]==6.15.2 (the HF Spaces Gradio-SDK install pins
    # pydantic<=2.12.5); any newer pydantic breaks the Space build.
    "pydantic>=2.11.10,<=2.12.5",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "datasets>=3.10",
    "python-jobspy>=1.1.80",
    "tqdm>=4.66",
    "modal>=0.64",
]

# The daily headless agent (scripts/cron_agent.py, run as a scheduled HF Job).
#
# An *extra* rather than a PEP-735 dependency-group on purpose: the Job installs the package
# straight from git via a PEP-723 inline block (`job-search[agent] @ git+...`), and inline
# script metadata can only request extras — it cannot reach dependency-groups.
[project.optional-dependencies]
agent = [
    "huggingface_hub>=1.23",  # Storage Buckets API (create_bucket / batch_bucket_files)
    "openpyxl>=3.1",          # the .xlsx report
    "pandas>=2.2",
    "pymupdf>=1.24",          # resume PDF -> text
]

[project.scripts]
gen-queries = "job_search.pipeline.gen_queries:main"
fetch-jobs = "job_search.pipeline.fetch_jobs:main"
gen-evals = "job_search.pipeline.gen_evals:main"
to-sft = "job_search.pipeline.to_sft:main"
job-agent = "job_search.agent.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_search"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Prompts are intentionally f-strings even without placeholders (project style).
ignore = ["F541"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
# Default `uv sync` installs main + dev + space so local dev covers data curation, linting,
# and the Gradio app simultaneously — no more "ran uv sync and gradio vanished". Modal images
# and HF Space deploys still use explicit `--group train` / `--group space`, so isolation
# across deployment targets is preserved where it matters.
default-groups = ["dev", "space"]


# --- PEP 735 dependency groups -------------------------------------------------
# Single source of truth. Modal images install via Image.uv_sync(groups=[...]).
# `uv sync` (no flag) installs main runtime + `dev` — what the local Mac needs.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "transformers>=5.2",   # local chat-template render checks (no torch needed)
    "jinja2>=3.1.6",
    "huggingface_hub>=1.23",  # deploy scripts + the Storage Buckets API
    # Pull the `agent` extra into the default sync (uv 0.10 has no `default-extras`), so a
    # plain `uv sync` leaves `uv run job-agent ...` runnable locally.
    "job-search[agent]",
]

# Modal training image — Qwen3-8B is a pure transformer (GQA). No custom CUDA kernels needed,
# SDPA in mainline torch handles attention. Vanilla HF stack only — nothing more.
train = [
    "torch>=2.6",            # CUDA build pulled in by Modal's gpu= setting
    "transformers>=4.51",    # Qwen3 added in 4.51 (Apr 2025); model_type "qwen3"
    "trl>=1.0",              # SFTTrainer + assistant_only_loss
    "peft>=0.16",
    "accelerate>=1.10",
    "datasets>=3.10",
]

# Gradio Spaces — local-dev parity only.
#
# Each Space's runtime `requirements.txt` is authored by hand at
# `scripts/spaces/<search|results>/requirements.txt` (the search Space's llama-cpp-python
# CUDA-wheel recipe needs `--extra-index-url` lines that uv's exporter doesn't emit, and the
# results viewer deliberately ships none of the model/scraping stack). This group exists
# purely so a developer can `uv sync` and run either Gradio app locally — the local backend
# is DeepSeek via PydanticAI, not llama.cpp, so no torch / CUDA stack is needed here.
space = [
    "gradio>=5",                # 5.x (May 2026): Blocks streaming + theming + queue
    "pymupdf>=1.24",            # PDF text extraction (PyMuPDF / fitz)
    "spaces>=0.30",             # @spaces.GPU decorator (no-op locally; import must resolve)
]
